--- a/crates/auroraview-tabs/Cargo.toml
+++ b/crates/auroraview-tabs/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 description = "Tab management for AuroraView (WebView-agnostic)"
 license = "MIT"
-repository = "https://github.com/aspect-apps/auroraview"
+repository = "https://github.com/loonghao/auroraview"
 keywords = ["webview", "tabs", "browser"]
 categories = ["gui", "web-programming"]
 
