--- a/crates/auroraview-downloads/Cargo.toml
+++ b/crates/auroraview-downloads/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 description = "Download management for AuroraView"
 license = "MIT"
-repository = "https://github.com/aspect-apps/auroraview"
+repository = "https://github.com/loonghao/auroraview"
 keywords = ["webview", "downloads", "browser"]
 categories = ["gui", "web-programming"]
 
