fix: add frontend assets build to all CI workflows that compile Rust
Add Node.js setup and 'npm install && npm run build' for

crates/auroraview-assets/frontend in all workflows that compile the

Rust workspace. The auroraview-assets crate uses RustEmbed with

#[folder = frontend/dist/] which requires the directory at compile time.

Fixed workflows:

- .github/actions/build-wheel/action.yml (fixes all wheel builds)

- .github/workflows/pr-checks.yml (rust-tests job)

- .github/workflows/ci.yml (docs and cli-builds jobs)

- .github/workflows/build-cli.yml (CLI build job)

- .github/workflows/build-gallery.yml (gallery pack job)

Signed-off-by: longhao <hal.long@outlook.com>

--- a/.github/actions/build-wheel/action.yml
+++ b/.github/actions/build-wheel/action.yml
@@ -83,6 +83,18 @@ runs:
           libxdo-dev \
           pkg-config
 
+    - name: Setup Node.js
+      uses: actions/setup-node@v6
+      with:
+        node-version: '20'
+
+    - name: Build frontend assets (required by auroraview-assets)
+      shell: bash
+      run: |
+        cd crates/auroraview-assets/frontend
+        npm install
+        npm run build
+
     - name: Cache Rust build
       if: runner.os != 'macOS' # Work around actions/runner hashFiles bug on macOS
       uses: actions/cache@v5
