--- a/packages/auroraview-sdk/package.json
+++ b/packages/auroraview-sdk/package.json
@@ -76,5 +76,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/loonghao/auroraview"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
